# food-manager

./: .gitmodules  NOTES.md  README.md  TODO.md  pyproject.toml
data/: .gitignore
scripts/: .gitignore  .sample.analyze_meals.py  .sample.populate_database.py  .sample.populate_weekly_database.py  .sample.update_weekly_meal_plan.py  .sample.weekly_meal_plan.py  compute_macros.py  compute_nutrients.py  compute_prices.py  generate_groceries.py  weekly_meal_plan_utils.py
src/food_manager/: .data  database  editor.py  path.py  schema.py  utils.py
